@@ -1,3 +1,9 @@
+2011-04-07  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Modules/ObjectiveC/ObjectiveCRuntime.m (-allClasses):
+	* Modules/ObjectiveC/NSObject+additions.m (methods_for_class,
+	ivars_for_class, +methodNames): Update to Objective-C 2 API.
+
 2011-04-06  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Frameworks/StepTalk/STObjCRuntime.m: replace runtime specific typed
